// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EditChildren > should extract node children 1`] = `
<div>
  Test1
  Test2
  Test3
</div>
`;

exports[`EditChildren should extract node children 1`] = `
Array [
  "Test1",
  "Test2",
  "Test3",
]
`;

exports[`EditSchema > should provide value for children 1`] = `
<div>
  Test
</div>
`;

exports[`EditSchema should provide value for children 1`] = `"Test"`;

exports[`EditSubListSchema > should extract an indexed value from node children 1`] = `
<div>
  Test2
</div>
`;

exports[`EditSubListSchema should extract an indexed value from node children 1`] = `"Test2"`;
